--- a/exo-player-compose/src/main/res/layout/custom_controller.xml
+++ b/exo-player-compose/src/main/res/layout/custom_controller.xml
@@ -34,36 +34,6 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
-        android:id="@+id/speed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_speed"
-        app:layout_constraintTop_toTopOf="@+id/subtitles"
-        app:layout_constraintBottom_toBottomOf="@+id/subtitles"
-        app:layout_constraintEnd_toStartOf="@+id/subtitles"
-        tools:ignore="ContentDescription" />
-
-    <ImageView
-        android:id="@+id/subtitles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_subtitles_off"
-        app:layout_constraintTop_toTopOf="@+id/audio_track"
-        app:layout_constraintBottom_toBottomOf="@+id/audio_track"
-        app:layout_constraintEnd_toStartOf="@+id/audio_track"
-        tools:ignore="ContentDescription" />
-
-    <ImageView
-        android:id="@+id/audio_track"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_audio_track"
-        app:layout_constraintTop_toTopOf="@+id/menu"
-        app:layout_constraintBottom_toBottomOf="@+id/menu"
-        app:layout_constraintEnd_toStartOf="@+id/menu"
-        tools:ignore="ContentDescription" />
-
-    <ImageView
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -109,7 +79,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/exo_play_pause"
         app:layout_constraintStart_toEndOf="@+id/exo_play_pause"/>
 
-
     <TextView
         android:id="@+id/exo_position"
         android:layout_width="wrap_content"
@@ -140,6 +109,63 @@
         app:layout_constraintTop_toTopOf="@+id/slash"
         app:layout_constraintBottom_toBottomOf="@+id/slash"/>
 
+    <com.google.android.exoplayer2.ui.DefaultTimeBar
+        android:id="@+id/exo_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        app:unplayed_color="@color/unplayed_color"
+        app:buffered_color="@color/buffered_color"
+        app:played_color="#FF0000"
+        app:scrubber_color="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/audio_track"/>
+
+    <ImageView
+        android:id="@+id/speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_speed"
+        app:layout_constraintTop_toTopOf="@+id/subtitles"
+        app:layout_constraintBottom_toBottomOf="@+id/subtitles"
+        app:layout_constraintStart_toEndOf="@+id/subtitles"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/pip_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_pip_mode"
+        app:layout_constraintTop_toTopOf="@+id/speed"
+        app:layout_constraintBottom_toBottomOf="@+id/speed"
+        app:layout_constraintStart_toEndOf="@+id/speed"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/subtitles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_subtitles_off"
+        app:layout_constraintTop_toTopOf="@+id/audio_track"
+        app:layout_constraintBottom_toBottomOf="@+id/audio_track"
+        app:layout_constraintStart_toEndOf="@+id/audio_track"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/audio_track"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_audio_track"
+        app:layout_constraintBottom_toBottomOf="@+id/fullscreen"
+        app:layout_constraintTop_toTopOf="@+id/fullscreen"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
+
     <ImageView
         android:id="@+id/bottom_skip_previous"
         android:layout_width="wrap_content"
@@ -168,19 +194,7 @@
         android:layout_marginEnd="5dp"
         android:src="@drawable/ic_fullscreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/exo_progress"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="ContentDescription" />
-
-    <com.google.android.exoplayer2.ui.DefaultTimeBar
-        android:id="@+id/exo_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:unplayed_color="@color/unplayed_color"
-        app:buffered_color="@color/buffered_color"
-        app:played_color="#FF0000"
-        app:scrubber_color="#FF0000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
