--- a/exo-player-compose/src/main/res/layout/custom_styled_player.xml
+++ b/exo-player-compose/src/main/res/layout/custom_styled_player.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
+        android:id="@+id/frame_layout_exo_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
