--- a/exo-player-compose/src/main/res/layout/exo_player.xml
+++ b/exo-player-compose/src/main/res/layout/exo_player.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.exoplayer2.ui.StyledPlayerView
         android:id="@+id/base_player_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:controller_layout_id="@layout/exo_controller"/>
 
 </FrameLayout>
